# ws-base

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/ws_base/: __about__.py  __init__.py  client.py  common.py  server.py  ws_base.py
src/wsbase/: __about__.py  client.py  common.py  gevent_server.py  server.py
tests/: test_clientserver.py  test_common.py
tests/clientserver/: __init__.py  client.py  common.py  server.py
