[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsbase"
dynamic = ["version"]
description = 'Websocket Cliet Server Base'
readme = "README.md"
requires-python = ">=3.11.0,<3.14.0"
license = "MIT"
keywords = []
authors = [{ name = "Haz", email = "mail@damianpala.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "aiohttp>=3.0.0,<4.0.0",
    "cryptography>=41.0.0",
    "logger @ git+https://github.com/DamianPala/logger.git@main",
    "python-socketio>=5.0.0,<6.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "requests>=2.0.0,<3.0.0",
    "websocket-client>=1.0.0,<2.0.0"
]

[project.urls]
Documentation = "https://github.com/DamianPala/wsbase#readme"
Issues = "https://github.com/DamianPala/wsbase/issues"
Source = "https://github.com/DamianPala/wsbase"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/wsbase/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "coverage[toml]>=6.5",
    "pytest",
    "pytest-mock",
    "pyinstrument"
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "pytest-asyncio",
    "pyinstrument"
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12"]

[tool.coverage.run]
source_pkgs = ["wsbase", "tests"]
branch = true
parallel = true
omit = [
    "src/wsbase/__about__.py",
]

[tool.coverage.paths]
wsbase = ["src/wsbase", "*/wsbase/src/wsbase"]
tests = ["tests", "*/wsbase/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = [
    ".",
    ".svn",
    "_build",
    "tmp*",
    "lib/third",
    "lib",
    "*.egg",
    "bin",
    "distutils",
    "build",
    "docs",
    "demo"
]
addopts = "-p no:xdist --tb=long --capture=fd -rxX  --maxfail=10"
python_files = ["*.py"]
log_cli = true
log_cli_level = "INFO"
log_format = "[%(asctime)s.%(msecs)03d] - %(name)s:%(lineno)d [%(levelname)s]: %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = [
    "tests"
]
